# come-capstone24-capstone-by-order-of-yongbeen

./: README.md
003 Code/: app.db  config.py  predict.py  requirement.sh  train.py  train_stage2.py
003 Code/app/: database.py  main.py  models.py
003 Code/app/templates/: login.html  register.html
003 Code/web_service/: pyproject.toml
003 Code/web_service/app/static/: main.js
003 Code/web_service/app/templates/: index.html
